apps/components/web-app/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app
spec:
  replicas: 3
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: app
  template:
    spec:
      containers:
        - name: app
          image: placeholder:latest
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
