apps/components/web-app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`app.${DOMAIN_INTERNAL}`)
      kind: Rule
      services:
        - name: app
          port: http
  tls:
    secretName: ${CERT_SECRET_INTERNAL}
